@@ -126,6 +126,54 @@ var defaultConfig = Config{
 				},
 			},
 		},
+		{
+			Name: "Light",
+			Colors: Colors{
+				Background:            mustParseHexColor("#ffffff"),
+				Foreground:            mustParseHexColor("#000000"),
+				SelectionBackground:   mustParseHexColor("#ADD6FF"),
+				SelectionForeground:   mustParseHexColor("#000000"),
+				Prompts:               mustParseHexColor("#333333"),
+				StatusBarBackground:   mustParseHexColor("#696969"),
+				StatusBarForeground:   mustParseHexColor("#000000"),
+				LineNumbersForeground: mustParseHexColor("#010101"),
+				ActiveWindowBorder:    mustParseHexColor("#8cde94"),
+				Cursor:                mustParseHexColor("#171717"),
+				CursorLineBackground:  mustParseHexColor("#52534E"),
+				SyntaxColors: SyntaxColors{
+					"ident":   mustParseHexColor("#000000"),
+					"type":    mustParseHexColor("#0000ff"),
+					"keyword": mustParseHexColor("#0000ff"),
+					"string":  mustParseHexColor("#a31515"),
+					"comment": mustParseHexColor("#008000"),
+				},
+			},
+		},
+		{
+			Name: "4coder_fleury",
+			Colors: Colors{
+				Background:                mustParseHexColor("#020202"),
+				Foreground:                mustParseHexColor("#b99468"),
+				SelectionBackground:       mustParseHexColor("#FF44DD"),
+				SelectionForeground:       mustParseHexColor("#ffffff"),
+				Prompts:                   mustParseHexColor("#333333"),
+				StatusBarBackground:       mustParseHexColor("#000000"),
+				StatusBarForeground:       mustParseHexColor("#ffa900"),
+				ActiveStatusBarBackground: mustParseHexColor("#000000"),
+				ActiveStatusBarForeground: mustParseHexColor("#ffa933"),
+				LineNumbersForeground:     mustParseHexColor("#010101"),
+				ActiveWindowBorder:        mustParseHexColor("#8cde94"),
+				Cursor:                    mustParseHexColor("#e0741b"),
+				CursorLineBackground:      mustParseHexColor("#52534E"),
+				SyntaxColors: SyntaxColors{
+					"ident":   mustParseHexColor("#90B090"),
+					"type":    mustParseHexColor("#f0c674"),
+					"keyword": mustParseHexColor("#f0c674"),
+					"string":  mustParseHexColor("#ffa900"),
+					"comment": mustParseHexColor("#666666"),
+				},
+			},
+		},
 	},
 	CursorLineHighlight:        true,
 	TabSize:                    4,
